--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     </head>
     <body>
     <canvas id="GameBoard" width="500" height="500"></canvas>
+    <script src="index.js"></script>
     </body>
 </html>
